package com.directi.training.isp.exercise_refactored;

import java.util.Random;

public class Sensor {
    public void register(ProximityDoor door)
    {
        while (true) {
            if (isPersonClose()) {
                door.proximityCallback();
                break;
            }
        }
    }

    private boolean isPersonClose()
    {
        return new Random().nextBoolean();
    }
}
